# koto

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/koto-app/: Cargo.toml
crates/koto-app/src/: main.rs
crates/koto-audio-engine/: Cargo.toml
crates/koto-audio-engine/src/: buffer_pool.rs  callback.rs  command.rs  device.rs  engine.rs  lib.rs
crates/koto-audio-graph/: Cargo.toml
crates/koto-audio-graph/src/: graph.rs  lib.rs  node.rs  schedule.rs
crates/koto-core/: Cargo.toml
crates/koto-core/src/: error.rs  lib.rs
crates/koto-core/src/traits/: mod.rs  processor.rs
crates/koto-core/src/types/: audio.rs  midi.rs  mod.rs  time.rs
crates/koto-midi/: Cargo.toml
crates/koto-midi/src/: device.rs  engine.rs  lib.rs
crates/koto-mixer/: Cargo.toml
crates/koto-mixer/src/: lib.rs
crates/koto-project/: Cargo.toml
crates/koto-project/src/: lib.rs
crates/koto-timeline/: Cargo.toml
crates/koto-timeline/src/: lib.rs
crates/koto-transport/: Cargo.toml
crates/koto-transport/src/: lib.rs
crates/koto-ui/: Cargo.toml
crates/koto-ui/src/: app.rs  lib.rs  theme.rs
crates/koto-ui/src/views/: mixer.rs  mod.rs  timeline.rs  transport.rs
crates/koto-ui/src/widgets/: knob.rs  meter.rs  mod.rs  waveform.rs
crates/koto-undo/: Cargo.toml
crates/koto-undo/src/: lib.rs
