[workspace]
resolver = "2"
members = [
    "crates/koto-core",
    "crates/koto-audio-engine",
    "crates/koto-audio-graph",
    "crates/koto-midi",
    "crates/koto-transport",
    "crates/koto-mixer",
    "crates/koto-timeline",
    "crates/koto-project",
    "crates/koto-undo",
    "crates/koto-ui",
    "crates/koto-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/koto"
authors = ["Koto Contributors"]

[workspace.dependencies]
# Core
thiserror = "2.0"
anyhow = "1.0"

# Audio I/O
cpal = "0.15"

# Audio decoding/encoding
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# DSP
dasp = "0.11"
dasp_sample = "0.11"
dasp_frame = "0.11"
dasp_signal = "0.11"
dasp_ring_buffer = "0.11"

# MIDI
midir = "0.10"

# Lock-free communication
rtrb = "0.3"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Graphics
eframe = { version = "0.30", features = ["wgpu"] }
egui = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.0", features = ["full"] }

# Undo/Redo
undo = "0.51"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
parking_lot = "0.12"

# Internal crates
koto-core = { path = "crates/koto-core" }
koto-audio-engine = { path = "crates/koto-audio-engine" }
koto-audio-graph = { path = "crates/koto-audio-graph" }
koto-midi = { path = "crates/koto-midi" }
koto-transport = { path = "crates/koto-transport" }
koto-mixer = { path = "crates/koto-mixer" }
koto-timeline = { path = "crates/koto-timeline" }
koto-project = { path = "crates/koto-project" }
koto-undo = { path = "crates/koto-undo" }
koto-ui = { path = "crates/koto-ui" }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
