[package]
name = "koto-audio-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time audio engine for Koto DAW"

[dependencies]
koto-core.workspace = true
cpal.workspace = true
rtrb.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
