[package]
name = "koto-midi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MIDI processing for Koto DAW"

[dependencies]
koto-core.workspace = true
midir.workspace = true
rtrb.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
tracing.workspace = true
