[package]
name = "koto-project"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project management for Koto DAW"

[dependencies]
koto-core.workspace = true
koto-timeline = { path = "../koto-timeline" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
